# cs2-match-tracker-v2-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  justfile  manage.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
accounts/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_google_id.py  0003_socialaccount.py
accounts/services/: __init__.py
authentication/: authentication.py  urls.py  views.py
chat/: consumers.py  factories.py  middleware.py  models.py  serializers.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/services/: __init__.py
core/: pagination.py  permissions.py
cs2_tracker/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
matches/: factories.py  models.py  serializers.py  tests.py  urls.py  views.py
matches/management/commands/: seed.py
matches/migrations/: 0001_initial.py
matches/services/: __init__.py
news/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
news/management/commands/: seed_news.py
news/migrations/: 0001_initial.py
